--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -27,17 +27,16 @@
   text-align: center;
 }
 
-.header .text-container span h1 {
+.header .text-container span a {
   color: white;
   font-size: 1.5rem; /* Usa unidades relativas para adaptarse a diferentes tamaños de pantalla */
   font-weight: bold;
   font-family: Georgia, serif;
   text-decoration: none;
   word-wrap: break-word; /* Permite dividir palabras largas si es necesario */
-  cursor: pointer;
 }
 
-.header .text-container span h1:hover {
+.header .text-container span a:hover {
   cursor: pointer;
 }
 
