--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <header class="header">
   <div class="logo">
     <a routerLink="/inicio">
-      <img src="assets/images/logo.png" alt="Logo">
+      <img src="assets/images/logo.png">
     </a>
   </div>
   <div class="text-container">
-    <span><a routerLink="/inicio">FriendComponents</a></span>
+    <span><h1 routerLink="/inicio">FriendComponents</h1></span>
   </div>
   <div class="images-container">
     <div class="dropdown">
