--- a/src/app/carrito/carrito.component.scss
+++ b/src/app/carrito/carrito.component.scss
@@ -116,7 +116,7 @@ $color-secundario: #ffffff;
   .total {
     text-align: right;
 
-    h3 {
+    .precio-total {
       color: $color-principal;
       font-size: 20px;
     }
