--- a/src/app/avisos/avisos.component.scss
+++ b/src/app/avisos/avisos.component.scss
@@ -133,7 +133,7 @@ h2{
 
 .ultima-actualizacion {
   font-size: 14px;
-  color: #999;
+  color: #1d1c1c;
   text-align: center;
   margin-top: 30px;
 }
