--- a/src/app/cookies/cookies.component.scss
+++ b/src/app/cookies/cookies.component.scss
@@ -47,7 +47,7 @@
   
   .ultima-actualizacion {
     font-size: 14px;
-    color: #999;
+    color: #1d1c1c;
     text-align: center;
     margin-top: 30px;
   }
