--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         </div> --> 
 
         <div class="col mb-3">
-            <p>Políticas</p>
+            <h1>Políticas</h1>
             <ul class="nav flex-column">
                 <li class="nav-item mb-2"><a href="/preguntas" class="nav-link p-0 text-body-secondary">Preguntas frecuentes</a></li>
                 <li class="nav-item mb-2"><a href="/politicas" class="nav-link p-0 text-body-secondary">Política de Privacidad</a></li>
@@ -21,10 +21,10 @@
         </div>
 
         <div class="row-pagos">
-            <img class="fondo" src="../../assets/images/pagos/paypal.png" alt="paypal" title="paypal" height="28.5px">
-            <img src="../../assets/images/pagos/MasterCard_Logo.svg" alt="mastercard" title="mastercard">
-            <img class="fondo" src="../../assets/images/pagos/visa-fondo.png" alt="visa" title="visa" height="40.5px">
-            <img src="../../assets/images/pagos/Maestro_logo.png" alt="maestrocard" title="maestrocard">
+            <img class="fondo" src="../../assets/images/pagos/paypal.png" alt="paypal" title="paypal-ico" height="28.5px">
+            <img src="../../assets/images/pagos/MasterCard_Logo.svg" alt="mastercard" title="mastercard-ico">
+            <img class="fondo" src="../../assets/images/pagos/visa-fondo.png" alt="visa" title="visa-ico" height="40.5px">
+            <img src="../../assets/images/pagos/Maestro_logo.png" alt="maestrocard" title="maestrocard-ico">
             <br>
             <br>
             <div class="col mb-3">
