--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -25,7 +25,7 @@ $text-color-secondary: rgba(255, 255, 255, 0.7);
       flex: 1;
 
 
-      p {
+      h1 {
         text-align: center;
         font-weight: bold;
         font-size: 1.2em;
