--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="logo">
     <a routerLink="/inicio">
-      <img src="assets/images/logo.png">
+      <img src="assets/images/logo.png" alt="Logo.img">
     </a>
   </div>
   <div class="text-container">
