--- a/src/app/politicas/politicas.component.scss
+++ b/src/app/politicas/politicas.component.scss
@@ -60,7 +60,7 @@ h2{
 // Última actualización
 .ultima-actualizacion {
   font-size: 14px;
-  color: #999;
+  color: #1d1c1c;
   text-align: center;
   margin-top: 30px;
 }
